<resources>
    <string name="app_name">POS - TokoKu</string>
    <string name="event_cat_merchant">Merchant</string>
    <string name="event_cat_user">User</string>
    <string name="event_cat_product">Product</string>
    <string name="event_act_registration">Registration</string>
    <string name="event_act_activation">Activation</string>
    <string name="event_cat_transaction">Transaction</string>
    <string name="event_act_payment">Payment</string>
    <string name="event_cat_task">Task</string>
    <string name="event_act_sync">Sync</string>
    <string name="login_merchant">Login to TokoKu</string>
    <string name="login_user">Login</string>
    <string name="merchant_id">Merchant Id</string>
    <string name="password">Password</string>
    <string name="user_id">User Id</string>
    <string name="pin">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="separator">|</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_text"><![CDATA[<p>POS TokoKu ("us", "we", or "our") operates the  website and the POS TokoKu mobile application (hereinafter referred to as the "Service").</p>

<p>This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data.

<p>We use your data to provide and improve the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, the terms used in this Privacy Policy have the same meanings as in our Terms and Conditions.</p>

For more info visit our <a href="http://policy-tokoku.appspot.com/">Privacy Policies</a>.</p>]]>
    </string>
    <string name="registration">Registration</string>
    <string name="merchant_name">Merchant Name</string>
    <string name="merchant_activation_title">Merchant Activation</string>
    <string name="merchant_activation_hint">Activation Code</string>
    <string name="forgot_password_login_id">Please provide your Login Id</string>
    <string name="resend_activation_code">Resend Activation Code</string>
    <string name="resend_activation_code_info">Please provide your email</string>
    <string name="tap_to_select">Tap to select</string>
    <string name="info_quantity">Total</string>
    <string name="info_revenue">Income</string>
    <string name="info_profit">Profit</string>
    <string name="empty"></string>
    <string name="search">SEARCH</string>
    <string name="add">ADD</string>
    <string name="alert">ALERT</string>
    <string name="notification">NOTIFICATION</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="delete">DELETE</string>
    <string name="edit">EDIT</string>
    <string name="select">SELECT</string>
    <string name="confirmation">CONFIRMATION</string>
    <string name="save">SAVE&#160;</string>
    <string name="select_printer">SELECT PRINTER</string>
    <string name="remarks">REMARKS</string>
    <string name="none"></string>
    <string name="price">PRICE</string>
    <string name="receipt">Receipt</string>
    <string name="import_excel">IMPORT PRODUCT</string>
    <string name="export_excel">EXPORT PRODUCT</string>
    <string name="import_add_product">Register %1$s</string>
    <string name="import_update_product">Update %1$s</string>
    <string name="import_product">Import product</string>
    <string name="export_product">Export product</string>
    <string name="sync">Sync</string>
    <string name="exit">Exit</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>
    <string name="status_active">Active</string>
    <string name="status_inactive">Inactive</string>
    <string name="status_yes">Yes</string>
    <string name="status_no">No</string>
    <string name="email_status_yes">Send promotional email</string>
    <string name="email_status_no">"Don\'t send promotional email"</string>
    <string name="product_status_active">Available</string>
    <string name="product_status_inactive">Not Available</string>
    <string name="product_type_goods">Goods</string>
    <string name="product_type_service">Service</string>
    <string name="product_type_non_goods_n_service">Non Goods &amp; Service</string>
    <string name="fnb_product_type_purchased">Purchased</string>
    <string name="fnb_product_type_self_made">Self Made</string>
    <string name="merchant_type_general_goods">General Goods</string>
    <string name="merchant_type_goods_and_service">Goods &amp; Services</string>
    <string name="merchant_type_food_and_beverage">Foods &amp; Beverages</string>
    <string name="merchant_type_medical_service">Medical Services</string>
    <string name="discount_type_percent">Percentage</string>
    <string name="discount_type_amount">Amount</string>
    <string name="order_type_no">Without Order</string>
    <string name="order_type_before_payment">Before Payment</string>
    <string name="order_type_after_payment">After Payment</string>
    <string name="product_search">PRODUCT SEARCH</string>
    <string name="product_list">PRODUCT LIST</string>
    <string name="product_add">ADD PRODUCT</string>
    <string name="product_group_list">PRODUCT CATEGORY</string>
    <string name="product_stock_alert">Stock Below Limit</string>
    <string name="bill_pastdue_alert">Bill Past Due</string>
    <string name="bill_no_receipt">No Receipt</string>
    <string name="msg_notification_search_action">Please provide your search criteria on top</string>
    <string name="msg_data_save_success">Data has been saved</string>
    <string name="msg_register_user">Select [+] below to register user account. Re-login with user account to enable full access to system functionality. </string>
    <string name="msg_register_user_conflict">User Login Id should not be the same as Merchant Login Id. </string>
    <string name="msg_reset_password_success">Reset password is successful !</string>
    <string name="msg_merchant_registration_info">Activation code will be sent to registered email</string>
    <string name="msg_merchant_registration_success">Merchant registration is successful !</string>
    <string name="msg_merchant_activation_info">Activation code has been sent to %1$s \n\nPlease contact us at +62 856 4745 3111 / app.tokoku@gmail.com, if you havent received it.</string>
    <string name="msg_merchant_activation_info_contact_us">Activation code has been sent to your email. Please contact us at app.tokoku@gmail.com, if you havent received it.</string>
    <string name="msg_refresh_data">Refreshing data</string>
    <string name="msg_generate_report">Generate report</string>
    <string name="msg_send_email">Sending email ...</string>
    <string name="field_code">Code</string>
    <string name="field_code_fl">C</string>
    <string name="field_name">Name</string>
    <string name="field_name_fl">N</string>
    <string name="field_type">Type</string>
    <string name="field_type_fl">T</string>
    <string name="field_group">Category</string>
    <string name="field_group_fl">C</string>
    <string name="field_price_type">Price Type</string>
    <string name="field_price_type_fl">P</string>
    <string name="field_price">Price</string>
    <string name="field_price_fl">P</string>
    <string name="field_selling_price">Sell Price</string>
    <string name="field_selling_price_fl">S</string>
    <string name="field_cost_price">Cost Price</string>
    <string name="field_cost_price_fl">P</string>
    <string name="field_pic_required">PIC Required</string>
    <string name="field_pic_required_fl">P</string>
    <string name="field_commission_type">Commission Type</string>
    <string name="field_commission_type_fl">C</string>
    <string name="field_commission">Commission</string>
    <string name="field_commission_fl">C</string>
    <string name="field_quantity_type">Quantity Type</string>
    <string name="field_quantity_type_fl">Q</string>
    <string name="field_stock">Stock</string>
    <string name="field_stock_fl">S</string>
    <string name="field_min_stock">Min. Stock</string>
    <string name="field_min_stock_fl">M</string>
    <string name="field_status">Status</string>
    <string name="field_status_fl">S</string>
    <string name="field_address">Address</string>
    <string name="field_address_fl">A</string>
    <string name="field_contact_name">Manager</string>
    <string name="field_contact_name_fl">M</string>
    <string name="field_contact_telephone">Telephone</string>
    <string name="field_contact_telephone_fl">T</string>
    <string name="field_contact_email">Email</string>
    <string name="field_contact_email_fl">E</string>
    <string name="field_login_id">Login Id</string>
    <string name="field_login_id_fl">L</string>
    <string name="field_password">Password</string>
    <string name="field_password_fl">P</string>
    <string name="field_period_start">Service Start</string>
    <string name="field_period_start_fl">A</string>
    <string name="field_period_end">Service End</string>
    <string name="field_period_end_fl">A</string>
    <string name="field_locale_fl">C</string>
    <string name="field_locale">Calendar &amp; Currency</string>
    <string name="field_tax_percentage">Tax</string>
    <string name="field_tax_percentage_fl">T</string>
    <string name="field_service_charge_percentage">Service Charge</string>
    <string name="field_service_charge_percentage_fl">S</string>
    <string name="field_access_right">Access Rights</string>
    <string name="field_access_right_fl">A</string>
    <string name="field_telephone">Telephone</string>
    <string name="field_telephone_fl">T</string>
    <string name="field_percentage">Percentage</string>
    <string name="field_percentage_fl">P</string>
    <string name="field_remarks">Remarks</string>
    <string name="field_remarks_fl">R</string>
    <string name="field_product">Product</string>
    <string name="field_product_fl">P</string>
    <string name="field_quantity">Total</string>
    <string name="field_quantity_fl">T</string>
    <string name="field_bills_reference_no">Bill No.</string>
    <string name="field_bills_reference_no_fl">B</string>
    <string name="field_delivery_no">Delivery No.</string>
    <string name="field_delivery_no_fl">D</string>
    <string name="field_supplier">Supplier</string>
    <string name="field_supplier_fl">S</string>
    <string name="field_payment_type">Payment Type</string>
    <string name="field_payment_type_fl">P</string>
    <string name="field_date">Date</string>
    <string name="field_date_fl">D</string>
    <string name="field_price_type_count">Price Type Count</string>
    <string name="field_price_type_count_fl">P</string>
    <string name="field_price_label_1">Price Type 1</string>
    <string name="field_price_label_1_fl">P</string>
    <string name="field_price_label_2">Price Type 2</string>
    <string name="field_price_label_2_fl">P</string>
    <string name="field_price_label_3">Price Type 3</string>
    <string name="field_price_label_3_fl">P</string>
    <string name="field_discount_type">Type</string>
    <string name="field_discount_type_fl">T</string>
    <string name="field_order_type">Order Type</string>
    <string name="field_order_type_fl">O</string>
    <string name="field_amount_fl">A</string>
    <string name="field_amount">Amount</string>
    <string name="field_security_question">Security Question</string>
    <string name="field_security_question_fl">S</string>
    <string name="field_security_answer">Security Answer</string>
    <string name="field_security_answer_fl">S</string>
    <string name="hint_percentage">Percentage %</string>
    <string name="hint_cost_price">Cost Price</string>
</resources>