<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/PlainFragmentStyle" >

    <LinearLayout
        style="@style/FormStyle">
		
        <LinearLayout style="@style/FormRowStyle"
            android:id="@+id/codePanel">

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_code_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_code" />

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/codeText"
                style="@style/FormInputStyle"
                android:focusable="false"/>
        </LinearLayout>
        
        <LinearLayout style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_name_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_name" />

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/nameText"
                style="@style/FormInputStyle" />
        </LinearLayout>

        <LinearLayout style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_type_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_type" />

            <Spinner
                android:id="@+id/typeSp"
                style="@style/FormInputListStyle" />
        </LinearLayout>

        <LinearLayout style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_address_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_address" />

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/addressText"
                style="@style/FormInputTextAreaStyle" />
        </LinearLayout>
		
        <LinearLayout style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_telephone_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_telephone" />

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/telephoneText"
                style="@style/FormInputPhoneStyle" />
        </LinearLayout>
        
        <LinearLayout style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_contact_name_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_contact_name" />

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/contactNameText"
                style="@style/FormInputStyle" />
        </LinearLayout>

        <LinearLayout style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_contact_telephone_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_contact_telephone" />

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/contactTelephoneText"
                style="@style/FormInputPhoneStyle" />
        </LinearLayout>
        
        <LinearLayout style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_contact_email_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_contact_email" />

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/contactEmailText"
                style="@style/FormInputEmailStyle" />
        </LinearLayout>

        <LinearLayout style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_login_id_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_login_id" />

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/loginIdText"
                style="@style/FormInputStyle" />
        </LinearLayout>

        <LinearLayout style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_password_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_password" />

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/passwordText"
                style="@style/FormInputPasswordStyle" />
        </LinearLayout>

        <LinearLayout style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_period_start_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_period_start" />

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/periodStartDate"
                style="@style/FormInputDateStyle" />
        </LinearLayout>

        <LinearLayout style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_period_end_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_period_end" />

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/periodEndDate"
                style="@style/FormInputDateStyle" />
        </LinearLayout>
        
        <LinearLayout style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_locale_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_locale" />

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/localeText"
                style="@style/FormInputDateStyle" />
        </LinearLayout>
        
        <LinearLayout 
            android:id="@+id/priceTypeCountPanel"
            style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_price_type_count_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_price_type_count" />

            <Spinner
                android:id="@+id/priceTypeCountSp"
                style="@style/FormInputListStyle" />
        </LinearLayout>
        
        <LinearLayout 
            android:id="@+id/priceLabel1Panel"
            style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_price_label_1_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_price_label_1" />

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/priceLabel1Text"
                style="@style/FormInputStyle" />
        </LinearLayout>
        
        <LinearLayout 
            android:id="@+id/priceLabel2Panel"
            style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_price_label_2_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_price_label_2" />

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/priceLabel2Text"
                style="@style/FormInputStyle" />
        </LinearLayout>
        
        <LinearLayout 
            android:id="@+id/priceLabel3Panel"
            style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_price_label_3_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_price_label_3" />

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/priceLabel3Text"
                style="@style/FormInputStyle" />
        </LinearLayout>
        
        <LinearLayout 
            android:id="@+id/orderTypePanel"
            style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_order_type_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_order_type" />

            <Spinner
                android:id="@+id/orderTypeSp"
                style="@style/FormInputListStyle" />
        </LinearLayout>
        
        <LinearLayout style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_tax_percentage_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_tax_percentage"/>

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/taxText"
                style="@style/FormInputNumericStyle"
                android:hint="@string/hint_percentage" />
        </LinearLayout>
        
        <LinearLayout style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_service_charge_percentage_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_service_charge_percentage"/>

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/serviceChargeText"
                style="@style/FormInputNumericStyle"
                android:hint="@string/hint_percentage"/>
        </LinearLayout>
        
        <LinearLayout style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_security_question_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_security_question"/>

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/securityQuestionText"
                style="@style/FormInputStyle"/>
        </LinearLayout>
        
        <LinearLayout style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_security_answer_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_security_answer"/>

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/securityAnswerText"
                style="@style/FormInputStyle"/>
        </LinearLayout>
        
        <LinearLayout 
            android:id="@+id/statusPanel"
            style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_status_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_status" />

            <Spinner
                android:id="@+id/statusSp"
                style="@style/FormInputListStyle" />
        </LinearLayout>
        
        <LinearLayout
            style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:layout_gravity="top"
                android:layout_marginTop="2dp"
                android:text="@string/field_payment_type_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:layout_gravity="top"
                android:layout_marginTop="2dp"
                android:text="@string/field_payment_type" />
            
            <LinearLayout
                android:id="@+id/paymentTypePanel"
                android:layout_weight="2"
                android:paddingTop="1dp"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
            </LinearLayout>

        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/accessRightsRowPanel"
            style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:layout_gravity="top"
                android:layout_marginTop="2dp"
                android:text="@string/field_access_right_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:layout_gravity="top"
                android:layout_marginTop="2dp"
                android:text="@string/field_access_right" />
            
            <LinearLayout
                android:id="@+id/accessRightsPanel"
                android:layout_weight="2"
                android:paddingTop="1dp"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
            </LinearLayout>

        </LinearLayout>
        
    </LinearLayout>

</ScrollView>