<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/PlainFragmentStyle" >

    <LinearLayout style="@style/FormStyle" >
		
        <LinearLayout style="@style/FormRowStyle" >
			
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_type_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_type" />

            <Spinner
                android:id="@+id/statusSp"
                style="@style/FormInputListStyle" />
        </LinearLayout>
        
        <LinearLayout style="@style/FormRowStyle" >
			
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_product_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_product" />

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/productNameText"
                style="@style/FormInputStyle" />
        </LinearLayout>
        
        <LinearLayout style="@style/FormRowStyle"
            android:id="@+id/productCostPricePanel">
			
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_cost_price_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_cost_price" />

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/productCostPriceText"
                style="@style/FormInputNumericStyle"
                android:hint="@string/hint_cost_price" />
        </LinearLayout>
        
        <LinearLayout style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_quantity_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_quantity" />

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/quantityText"
                style="@style/FormInputNumericStyle" />
        </LinearLayout>

        <LinearLayout style="@style/FormRowStyle"
            android:id="@+id/deliveryNoPanel">

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_delivery_no_fl" />

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_delivery_no" />

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/deliveryNoText"
                style="@style/FormInputSelectStyle" />
        </LinearLayout>

        <LinearLayout style="@style/FormRowStyle"
            android:id="@+id/billReferenceNoPanel">

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_bills_reference_no_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_bills_reference_no" />

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/billsReferenceNoText"
                style="@style/FormInputSelectStyle" />
        </LinearLayout>

        <LinearLayout style="@style/FormRowStyle"
            android:id="@+id/supplierPanel">

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_supplier_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_supplier" />

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/supplierNameText"
                style="@style/FormInputStyle" />
        </LinearLayout>
        
        <LinearLayout style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_date_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_date" />

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/inventoryDate"
                style="@style/FormInputDateStyle" />
        </LinearLayout>
        
        <LinearLayout 
            android:id="@+id/remarksPanel"
            style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_remarks_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_remarks" />

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/remarksText"
                style="@style/FormInputTextAreaStyle" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>