<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/PlainFragmentStyle">

    <LinearLayout style="@style/FormStyle" >
		
        <LinearLayout style="@style/FormRowStyle" >
			
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_name_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_name" />

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/nameText"
                style="@style/FormInputStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/discountTypePanel"
            style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_discount_type_fl" />

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_discount_type" />

            <Spinner
                android:id="@+id/discountTypeSp"
                style="@style/FormInputListStyle" />
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/percentagePanel"
            style="@style/FormRowStyle" >
			
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_percentage_fl" />
            
            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_percentage" />

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/percentageText"
                style="@style/FormInputNumericStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/amountPanel"
            style="@style/FormRowStyle" >

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_amount_fl" />

            <com.tokoku.pos.common.BoldTextView
                style="@style/FormTextStyle"
                android:text="@string/field_amount" />

            <com.tokoku.pos.common.BoldEditText
                android:id="@+id/amountText"
                style="@style/FormInputNumericStyle" />
        </LinearLayout>
        
    </LinearLayout>

</ScrollView>